--- a/Ubra/GuestDashboard.html
+++ b/Ubra/GuestDashboard.html
@@ -490,6 +490,11 @@
       <a class="orange-text text-lighten-3" href="#">Copyright © 2022 UBRA. All rights reserved.</a>
       </div>
     </div>
+    <div class="footer-copyright">
+      <div class="container">
+      <a class="orange-text text-lighten-3" href="#">Copyright © 2022 UBRA. All rights reserved.</a>
+      </div>
+    </div>
   </footer>
 
 
